add streaming and scripts
